--- a/info.html
+++ b/info.html
@@ -9,6 +9,28 @@
 
 <body id="bodyInfo">
 
+    <!-- ===== HEADER ===== -->
+    <div class="headerPrincipal">
+        <div class="logo">
+            <img src="img/logo.png" alt="PizzaLine Logo">
+            <h1>PizzaLine</h1>
+        </div>
+
+        <!-- NAV -->
+        <div class="navPrincipal">
+            <ul>
+                <li><a href="info.html">Acerca de Nosotros</a></li>
+                <li><a href="carta.html">Carta</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="branches.html">Sucursales</a></li>
+            </ul>
+        </div>
+
+        <div class="login-btn">
+            <a href="login.html">Login</a>
+        </div>
+    </div>
+
     <a href="index.html" id="btnVolver">
         <span class="pizzaIcono">🍕</span>
         <span class="textoVolver">Volver</span>
@@ -95,5 +117,9 @@
     </script>
     <!-- ========== FIN BOTÓN ========== -->
 
+    <!-- ===== FOOTER ===== -->
+    <div class="footerPrincipal">
+        <p>© 2025 PizzaLine - Todos los derechos reservados.</p>
+    </div>
 </body>
 </html>
