agregamos imagenes en pag principal y correciones de css

--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
     <!-- ===== HEADER ===== -->
     <div class="headerPrincipal">
         <div class="logo">
-            <img src="img/logo.png" alt="PizzaLine Logo">
+            <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
             <h1>PizzaLine</h1>
         </div>
 
@@ -21,7 +21,6 @@
             <ul>
                 <li><a href="info.html">Acerca de Nosotros</a></li>
                 <li><a href="carta.html">Carta</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="branches.html">Sucursales</a></li>
             </ul>
         </div>
