--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PizzaLine - Inicio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- ===== HEADER ===== -->
     <div class="headerPrincipal">
         <div class="logo">
-            <img src="img/logo.png" alt="PizzaLine Logo">
+            <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
             <h1>PizzaLine</h1>
         </div>
 
@@ -20,7 +22,6 @@
             <ul>
                 <li><a href="info.html">Acerca de Nosotros</a></li>
                 <li><a href="carta.html">Carta</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="branches.html">Sucursales</a></li>
             </ul>
         </div>
@@ -36,12 +37,12 @@
             <h2>Promociones y Combos</h2>
             <div class="promos">
                 <div class="promo-card">
-                    <img src="img/promo1.jpg" alt="Promo 1">
+                    <img src="images/pizza-muzarella-451x300.png" alt="Promo 1">
                     <h3>2x1 en Muzza</h3>
                     <p>Todos los martes y jueves</p>
                 </div>
                 <div class="promo-card">
-                    <img src="img/promo2.jpg" alt="Promo 2">
+                    <img src="images/4399634f1a15-2-slice-pizza-gaseosa-400ml.png" alt="Promo 2">
                     <h3>Combo Familiar</h3>
                     <p>2 Pizzas + 1 Gaseosa a $8000</p>
                 </div>
@@ -71,9 +72,9 @@
             <section class="descuentos">
                 <h3>💳 Descuentos Bancarios</h3>
                 <div class="bancos">
-                    <img src="img/bancos/banco1.png" alt="Banco 1">
-                    <img src="img/bancos/banco2.png" alt="Banco 2">
-                    <img src="img/bancos/banco3.png" alt="Banco 3">
+                    <img src="images/Banco_Nación.svg.png" alt="Banco 1">
+                    <img src="images/Logo_Banco_Galicia.svg.png" alt="Banco 2">
+                    <img src="images/Banco_Santander_Logotipo_(2007-2018).svg" alt="Banco 3">
                 </div>
             </section>
         </div>
@@ -94,12 +95,15 @@
             <a href="https://facebook.com" target="_blank">Facebook</a>
         </div>
 
+        <div class="social-icons" style="display:flex; justify-content:center; gap:20px; margin-top:10px;">
+            <img src="images/Instagram_logo_2022.svg.png" alt="Instagram" style="width:70px;">
+            <img src="images/Logo_de_Facebook.png" alt="Facebook" style="width:70px;">
+        </div>
+
         <h4>Ubicación</h4>
 
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!...replace_with_valid_embed..."
-            width="100%" height="250" style="border:0; border-radius:10px;"
-            allowfullscreen="" loading="lazy">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!...replace_with_valid_embed..." width="100%"
+            height="250" style="border:0; border-radius:10px;" allowfullscreen="" loading="lazy">
         </iframe>
     </section>
     <!-- ===== FIN CONTACTO ===== -->
@@ -120,9 +124,12 @@
     <section id="reseñas" style="padding: 40px; background:#fff8f0;">
         <h3 style="text-align:center; color:#d32f2f; font-size:28px;">Reseñas de clientes</h3>
 
-        <form id="form-review" style="max-width:600px; margin:20px auto; display:flex; flex-direction:column; gap:10px;">
-            <input id="review-name" placeholder="Tu nombre" required style="padding:10px; border-radius:6px; border:1px solid #ccc;" />
-            <textarea id="review-text" placeholder="Tu reseña" required style="padding:10px; height:100px; border-radius:6px; border:1px solid #ccc;"></textarea>
+        <form id="form-review"
+            style="max-width:600px; margin:20px auto; display:flex; flex-direction:column; gap:10px;">
+            <input id="review-name" placeholder="Tu nombre" required
+                style="padding:10px; border-radius:6px; border:1px solid #ccc;" />
+            <textarea id="review-text" placeholder="Tu reseña" required
+                style="padding:10px; height:100px; border-radius:6px; border:1px solid #ccc;"></textarea>
 
             <select id="review-rating" style="padding:10px; border-radius:6px; border:1px solid #ccc;">
                 <option value="5">5 ⭐</option>
@@ -132,7 +139,9 @@
                 <option value="1">1 ⭐</option>
             </select>
 
-            <button style="padding:12px; background:#d32f2f; color:white; border:none; border-radius:6px; cursor:pointer;">Enviar reseña</button>
+            <button
+                style="padding:12px; background:#d32f2f; color:white; border:none; border-radius:6px; cursor:pointer;">Enviar
+                reseña</button>
         </form>
 
         <div id="reviews-list" style="max-width:700px; margin:20px auto;"></div>
@@ -148,5 +157,5 @@
 
     <script src="js/main.js"></script>
 </body>
-</html>
 
+</html>
