--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
 </head>
 <body>
 
+    <!-- ==================== AVISO LOGIN (AQUÍ VA) ==================== -->
+  <div id="login-warning" 
+       style="display:none;
+              padding:20px;
+              background:#ffe5e5;
+              border:2px solid #d32f2f;
+              color:#b71c1c;
+              font-weight:bold;
+              text-align:center;
+              margin:20px;
+              border-radius:10px;">
+      ⚠ Necesitas iniciar sesión para continuar  
+      <br><br>
+      <a href="login.html" 
+         style="background:#d32f2f;
+                color:white;
+                padding:10px 20px;
+                border-radius:6px;
+                text-decoration:none;">
+          Ir al login
+      </a>
+  </div>
+
+  <script src="js/checkLogin.js"></script>
+    <!-- ==================== FIN AVISO ==================== -->
+
     <!-- ===== HEADER ===== -->
     <div class="headerPrincipal">
         <div class="logo">
@@ -103,18 +129,6 @@
         </iframe>
     </section>
     <!-- ===== FIN CONTACTO ===== -->
-
-    <!-- ===== REGISTRO ===== -->
-    <section class="registro">
-        <h2>Registrate para hacer tu pedido</h2>
-        <form id="registroForm" action="pages/registro.html" method="get">
-            <input type="text" placeholder="Nombre y Apellido" required>
-            <input type="tel" placeholder="Teléfono" required>
-            <input type="email" placeholder="Correo Electrónico" required>
-            <input type="password" placeholder="Contraseña" required>
-            <button type="submit">Crear cuenta</button>
-        </form>
-    </section>
 
     <!-- ===== ⭐ RESEÑAS ===== -->
     <section id="reseñas" style="padding: 40px; background:#fff8f0;">
