--- a/carrito.html
+++ b/carrito.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <!-- ==================== AVISO LOGIN (AQUÍ VA) ==================== -->
+  <!-- ==================== AVISO LOGIN ==================== -->
   <div id="login-warning" 
        style="display:none;
               padding:20px;
@@ -30,23 +30,16 @@
       </a>
   </div>
 
+  <!-- Caja de mensajes -->
+  <div id="msg-box"
+       style="display:none; padding:15px;
+              margin:20px; text-align:center;
+              background:#fff3cd; border:1px solid #ffcc00;
+              border-radius:10px; font-weight:bold;">
+  </div>
+
   <script src="js/checkLogin.js"></script>
   <!-- ==================== FIN AVISO ==================== -->
-
-
-  <!-- ==================== CAJA DE MENSAJES (AGREGADA AQUÍ) ==================== -->
-  <div id="msg-box" 
-       style="display:none; 
-              padding:15px; 
-              margin:20px; 
-              text-align:center;
-              background:#fff3cd; 
-              border:1px solid #ffcc00;
-              border-radius:10px; 
-              font-weight:bold;">
-  </div>
-  <!-- ==================== FIN MENSAJES ==================== -->
-
 
   <h1>Tu Carrito</h1>
 
