--- a/carta.html
+++ b/carta.html
@@ -14,9 +14,8 @@
 </head>
 
 <body id="bodyCarta">
-  <body id="bodyCarta">
 
-  <!-- ==================== AVISO LOGIN (AQUÍ VA) ==================== -->
+  <!-- ==================== AVISO LOGIN ==================== -->
   <div id="login-warning" 
        style="display:none;
               padding:20px;
@@ -38,66 +37,61 @@
           Ir al login
       </a>
   </div>
+
   <script src="js/checkLogin.js"></script>
   <!-- ==================== FIN AVISO ==================== -->
 
   <!-- ===== HEADER ===== -->
-    <div class="headerPrincipal">
-        <div class="logo">
-            <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
-            <h1>PizzaLine</h1>
-        </div>
+  <div class="headerPrincipal">
+      <div class="logo">
+          <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
+          <h1>PizzaLine</h1>
+      </div>
 
-        <!-- NAV -->
-        <div class="navPrincipal">
-            <ul>
-                <li><a href="info.html">Acerca de Nosotros</a></li>
-                <li><a href="carta.html">Carta</a></li>
-                <li><a href="branches.html">Sucursales</a></li>
-            </ul>
-        </div>
+      <!-- NAV -->
+      <div class="navPrincipal">
+          <ul>
+              <li><a href="info.html">Acerca de Nosotros</a></li>
+              <li><a href="carta.html">Carta</a></li>
+              <li><a href="branches.html">Sucursales</a></li>
+          </ul>
+      </div>
 
-        <div class="login-btn">
-            <a href="login.html">Login</a>
-        </div>
-    </div>
+      <div class="login-btn">
+          <a href="login.html">Login</a>
+      </div>
+  </div>
 
   <a href="index.html" id="btnVolver">
     <span class="pizzaIcono">🍕</span>
     <span class="textoVolver">Volver</span>
   </a>
 
-  <nav></nav>
-
   <h1 id="tituloCarta"><strong>MENÚ PIZZALINE</strong></h1>
 
-  <!-- BARREA DE BÚSQUEDA (AGREGADA AQUÍ) -->
+  <!-- BUSCADOR -->
   <div class="busqueda-wrap" style="text-align:center; margin-top:20px;">
     <input id="search-input" 
            type="search" 
            placeholder="Buscar pizza por nombre..." 
            style="padding:10px; width:60%; border-radius:8px; border:1px solid #ccc; font-size:16px;">
   </div>
-  <!-- FIN BUSQUEDA -->
-
 
   <div id="containerCarta">
     <main>
       <div class="carta">
 
-        <!-- SECCIÓN PIZZAS -->
+        <!-- PIZZAS -->
         <section id="seccion-pizzas">
           <h2>Pizzas</h2>
           <img src="images/pizza.png" width="120px" alt="icono de pizza" id="iconPizza">
-
           <ul id="lista-pizzas" class="listaPizzas"></ul>
         </section>
 
-        <!-- SECCIÓN BEBIDAS -->
+        <!-- BEBIDAS -->
         <section id="seccion-bebidas">
           <h2>Bebidas</h2>
           <img src="images/bebidas.png" width="120px" alt="icono bebidas" id="iconBebidas">
-    <!-- Contenedor donde JS va a cargar TODAS las bebidas -->
           <ul id="lista-bebidas" class="listaBebidas"></ul>
         </section>
 
@@ -105,12 +99,13 @@
     </main>
   </div>
 
-
+  <script src="carrito.js"></script>
   <script src="carta.js"></script>
 
   <!-- ===== FOOTER ===== -->
-    <div class="footerPrincipal">
-        <p>© 2025 PizzaLine - Todos los derechos reservados.</p>
-    </div>
+  <div class="footerPrincipal">
+      <p>© 2025 PizzaLine - Todos los derechos reservados.</p>
+  </div>
+
 </body>
 </html>
