--- a/admin/adminDashboard.html
+++ b/admin/adminDashboard.html
@@ -10,14 +10,28 @@
 </head>
 <body>
 
-  <h1>Dashboard de Pedidos</h1>
-  <p>Estadísticas generales del sistema</p>
+  <h1 style="text-align:center;">Dashboard de Pedidos</h1>
+  <p style="text-align:center;">Estadísticas generales del sistema</p>
 
-  <div style="width: 500px; margin: auto;">
-    <canvas id="graficoPedidos"></canvas>
+  <!-- Contenedor del gráfico -->
+  <div style="width: 600px; margin:40px auto;">
+      <canvas id="graficoPedidos"></canvas>
   </div>
 
+  <!-- Botón para volver al panel admin -->
+  <div style="text-align:center; margin-top:30px;">
+    <a href="adminPedidos.html" 
+       style="background:#d32f2f; color:white; padding:10px 20px;
+              border-radius:6px; text-decoration:none;">
+       ← Volver al panel de pedidos
+    </a>
+  </div>
+
+  <!-- Archivo que tiene las funciones GET/POST/PUT -->
   <script src="../orders.js"></script>
+
+  <!-- Dashboard.js donde generamos las métricas -->
   <script src="dashboard.js"></script>
+
 </body>
 </html>
