--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
 
     <!-- LOGO -->
     <div class="logo" style="display:flex; align-items:center; gap:10px;">
-        <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" 
+        <img src="images/LogoTipoPizzaLine.png" 
             alt="PizzaLine Logo" 
-            style="width:60px; height:60px; border-radius:8px;">
-        <h1>PizzaLine</h1>
+            style="width:300px; height:150px; border-radius:8px;">
         </div>
 
     <!-- NAV CENTRADO -->
@@ -87,7 +86,7 @@
                 <div class="promo-card">
                     <img src="images/4399634f1a15-2-slice-pizza-gaseosa-400ml.png" alt="Promo 2">
                     <h3>Combo Familiar</h3>
-                    <p>2 Pizzas + 1 Gaseosa a $8000</p>
+                    <p>2 Pizzas + 1 Gaseosa a $11000</p>
                 </div>
             </div>
         </section>
@@ -145,9 +144,14 @@
 
         <h4>Ubicación</h4>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!...replace_with_valid_embed..." width="100%"
+        <div class="ubicacion" style="display:flex; align-items:center; gap:10px;">
+            <img src="images/ubicacion.png"
+            height="250" style="width:3000px; border:0; border-radius:10px;" allowfullscreen="" loading="lazy">
+        </div>
+
+        <!--<iframe src="https://maps.app.goo.gl/Ygw2F8hXBtKxsN7e6" width="100%"
             height="250" style="border:0; border-radius:10px;" allowfullscreen="" loading="lazy">
-        </iframe>
+        </iframe>-->
     </section>
 
     <!-- ===== RESEÑAS ===== -->
