--- a/carrito.html
+++ b/carrito.html
@@ -10,7 +10,7 @@
 <body>
 
   <!-- ==================== AVISO LOGIN ==================== -->
-  <div id="login-warning" 
+  <div id="login-warning"
        style="display:none;
               padding:20px;
               background:#ffe5e5;
@@ -22,7 +22,7 @@
               border-radius:10px;">
       ⚠ Necesitas iniciar sesión para continuar  
       <br><br>
-      <a href="login.html" 
+      <a href="login.html"
          style="background:#d32f2f;
                 color:white;
                 padding:10px 20px;
@@ -40,8 +40,8 @@
               border-radius:10px; font-weight:bold;">
   </div>
 
+  <!-- LOGIN CHECK -->
   <script src="js/checkLogin.js"></script>
-  <!-- ==================== FIN AVISO ==================== -->
 
   <h1 style="text-align:center;">Tu Carrito</h1>
 
@@ -52,9 +52,9 @@
   <button onclick="vaciarCarrito()" class="btn-vaciar">Vaciar carrito</button>
   <button onclick="finalizarPedido()" class="btn-finalizar">Finalizar pedido</button>
 
-  <!-- IMPORTANTE: first orders.js, then carrito.js -->
   <script src="orders.js"></script>
   <script src="carrito.js"></script>
 
 </body>
 </html>
+
