--- a/pedidos.html
+++ b/pedidos.html
@@ -25,7 +25,7 @@
     <!-- Verificación login -->
     <script src="js/checkLogin.js"></script>
 
-    <h1 style="text-align:center; margin-top:20px;">🧾 Mis pedidos</h1>
+    <h1 style="text-align:center; margin-top:20px;">Mis pedidos</h1>
 
     <div id="mis-pedidos-container"
          style="max-width:900px; margin:20px auto; padding:20px; display:flex; flex-direction:column; gap:20px;">
