--- a/admin/MENU (mockapi)/agregarItem.html
+++ b/admin/MENU (mockapi)/agregarItem.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <h2>Agregar Item</h2>
-        <a href="/admin/gestionarMenu.html">
+        <a href="../gestionarMenu.html">
             <button type="button">Volver</button>
         </a>
     </nav>
