--- a/admin/gestionarMenu.html
+++ b/admin/gestionarMenu.html
@@ -8,7 +8,7 @@
 <body>
     <nav><a href="administracion.html">Inicio</a></nav>
     <div>
-    <a href="/admin/MENU (mockapi)/agregarItem.html">
+    <a href="MENU (mockapi)/agregarItem.html">
         <button type="button">Agregar Item</button>
     </a>
 
