--- a/branches.html
+++ b/branches.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,15 @@
     <!-- Importa el CSS general (incluye estilos base, header, footer y tarjetas) -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<!-- ===== HEADER ===== -->
+    <!-- ===== HEADER ===== -->
     <div class="headerPrincipal">
         <div class="logo">
             <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
             <h1>PizzaLine</h1>
         </div>
 
-        <!-- NAV -->
         <div class="navPrincipal">
             <ul>
                 <li><a href="info.html">Acerca de Nosotros</a></li>
@@ -25,53 +26,57 @@
             </ul>
         </div>
 
+
         <div class="login-btn">
             <a href="login.html">Login</a>
         </div>
     </div>
 
 
-<main>
-    <section class="sucursales">
-        <!-- Título de la sección -->
-        <h2>Nuestras Sucursales</h2>
+    <main>
+        <section class="sucursales">
+            <!-- Título de la sección -->
+            <h2>Nuestras Sucursales</h2>
 
-        <!-- CONTENEDOR DE TARJETAS (misma estructura visual de "promos") -->
-        <div class="promos">
+            <!-- CONTENEDOR DE TARJETAS (misma estructura visual de "promos") -->
+            <div class="promos">
 
-            <!-- TARJETA 1 -->
-            <div class="promo-card">
-                <h3>Villa María</h3>
-                <p>Av. San Martín 850<br>Tel: (0353) 455-7777</p>
+                <!-- TARJETA 1 -->
+                <div class="promo-card">
+                    <h3>Villa María</h3>
+                    <p>Av. San Martín 850<br>Tel: (0353) 455-7777</p>
+                </div>
+
+                <!-- TARJETA 2 -->
+                <div class="promo-card">
+                    <h3>Río Cuarto</h3>
+                    <p>Belgrano 450<br>Tel: (0358) 462-9000</p>
+                </div>
+
+                <!-- TARJETA 3 -->
+                <div class="promo-card">
+                    <h3>Villa Regina</h3>
+                    <p>Rivadavia 1020<br>Tel: (0298) 445-2000</p>
+                </div>
+
             </div>
+            <!-- FIN CONTENEDOR PROMOS -->
+        </section>
+    </main>
 
-            <!-- TARJETA 2 -->
-            <div class="promo-card">
-                <h3>Río Cuarto</h3>
-                <p>Belgrano 450<br>Tel: (0358) 462-9000</p>
-            </div>
-
-            <!-- TARJETA 3 -->
-            <div class="promo-card">
-                <h3>Villa Regina</h3>
-                <p>Rivadavia 1020<br>Tel: (0298) 445-2000</p>
-            </div>
-
-        </div>
-        <!-- FIN CONTENEDOR PROMOS -->
-    </section>
-</main>
-
-<!-- ===== FOOTER ===== -->
+    <!-- ===== FOOTER ===== -->
     <div class="footerPrincipal">
         <p>© 2025 PizzaLine - Todos los derechos reservados.</p>
     </div>
 
- <a href="index.html" id="btnVolver">
-    <span class="pizzaIcono">🍕</span>
-    <span class="textoVolver">Volver</span>
-  </a>
+    <a href="index.html" id="btnVolver">
+        <span class="pizzaIcono">🍕</span>
+        <span class="textoVolver">Volver</span>
+    </a>
+
+    <script src="auth.js"></script>
 
 
 </body>
+
 </html>
