--- a/registroUsuario.html
+++ b/registroUsuario.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrate</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body id="bodyRegistro">
     <h1 id="h1Registro">Formulario de registro</h1>
     <form action="" method="post" id="formulario">
@@ -30,5 +32,11 @@
         </div>
     </form>
     <script src="registroUsuario.js"></script>
+
+    <a href="index.html" id="btnVolver">
+        <span class="pizzaIcono">🍕</span>
+        <span class="textoVolver">Volver</span>
+    </a>
 </body>
+
 </html>
