--- a/carta.html
+++ b/carta.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,20 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Special+Gothic+Expanded+One&display=swap"
+    rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Special+Gothic+Expanded+One&display=swap"
+    rel="stylesheet">
 </head>
 
 <body id="bodyCarta">
 
   <!-- ==================== AVISO LOGIN ==================== -->
-  <div id="login-warning" 
-       style="display:none;
+  <div id="login-warning" style="display:none;
               padding:20px;
               background:#ffe5e5;
               border:2px solid #d32f2f;
@@ -26,40 +30,38 @@
               text-align:center;
               margin:20px;
               border-radius:10px;">
-      ⚠ Necesitas iniciar sesión para continuar  
-      <br><br>
-      <a href="login.html" 
-         style="background:#d32f2f;
+    ⚠ Necesitas iniciar sesión para continuar
+    <br><br>
+    <a href="login.html" style="background:#d32f2f;
                 color:white;
                 padding:10px 20px;
                 border-radius:6px;
                 text-decoration:none;">
-          Ir al login
-      </a>
+      Ir al login
+    </a>
   </div>
 
-  <script src="js/checkLogin.js"></script>
   <!-- ==================== FIN AVISO ==================== -->
 
   <!-- ===== HEADER ===== -->
   <div class="headerPrincipal">
-      <div class="logo">
-          <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
-          <h1>PizzaLine</h1>
-      </div>
+    <div class="logo">
+      <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
+      <h1>PizzaLine</h1>
+    </div>
 
-      <!-- NAV -->
-      <div class="navPrincipal">
-          <ul>
-              <li><a href="info.html">Acerca de Nosotros</a></li>
-              <li><a href="carta.html">Carta</a></li>
-              <li><a href="branches.html">Sucursales</a></li>
-          </ul>
-      </div>
+    <div class="navPrincipal">
+      <ul>
+        <li><a href="info.html">Acerca de Nosotros</a></li>
+        <li><a href="carta.html">Carta</a></li>
+        <li><a href="branches.html">Sucursales</a></li>
+      </ul>
+    </div>
 
-      <div class="login-btn">
-          <a href="login.html">Login</a>
-      </div>
+
+    <div class="login-btn">
+      <a href="login.html">Login</a>
+    </div>
   </div>
 
   <a href="index.html" id="btnVolver">
@@ -71,10 +73,8 @@
 
   <!-- BUSCADOR -->
   <div class="busqueda-wrap" style="text-align:center; margin-top:20px;">
-    <input id="search-input" 
-           type="search" 
-           placeholder="Buscar pizza por nombre..." 
-           style="padding:10px; width:60%; border-radius:8px; border:1px solid #ccc; font-size:16px;">
+    <input id="search-input" type="search" placeholder="Buscar pizza por nombre..."
+      style="padding:10px; width:60%; border-radius:8px; border:1px solid #ccc; font-size:16px;">
   </div>
 
   <div id="containerCarta">
@@ -99,13 +99,18 @@
     </main>
   </div>
 
-  <script src="carrito.js"></script>
-  <script src="carta.js"></script>
 
   <!-- ===== FOOTER ===== -->
   <div class="footerPrincipal">
-      <p>© 2025 PizzaLine - Todos los derechos reservados.</p>
+    <p>© 2025 PizzaLine - Todos los derechos reservados.</p>
   </div>
 
+  <script src="carrito.js"></script>
+  <script src="carta.js"></script>
+  <script src="js/checkLogin.js"></script>
+  <script src="auth.js"></script>
+
+
 </body>
+
 </html>
